EDSC-4063: fix alignment on the Access Method page for icon

--- a/static/src/js/components/Panels/PanelGroupHeader.scss
+++ b/static/src/js/components/Panels/PanelGroupHeader.scss
@@ -62,6 +62,7 @@
   }
 
   &__heading-wrap {
+    align-items: center;
     display: flex;
     width: 100%;
   }
